--- a/package.json
+++ b/package.json
@@ -10,17 +10,21 @@
   },
   "dependencies": {
     "@iconify/react": "^5.0.2",
+    "@reduxjs/toolkit": "^2.2.7",
     "formik": "^2.4.6",
+    "hamburger-react": "^2.5.1",
     "next": "14.2.14",
     "react": "^18",
     "react-dom": "^18",
+    "react-redux": "^9.1.2",
     "react-toastify": "^10.0.5",
     "yup": "^1.4.0"
   },
   "devDependencies": {
     "@types/node": "^20",
-    "@types/react": "^18",
+    "@types/react": "^18.3.11",
     "@types/react-dom": "^18",
+    "@types/react-redux": "^7.1.34",
     "eslint": "^8",
     "eslint-config-next": "14.2.14",
     "postcss": "^8",
