--- a/github/workflows/main.yml
+++ b/github/workflows/main.yml
@@ -42,7 +42,7 @@ jobs:
         uses: docker/build-push-action@v3
         with:
           push: true
-          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/BaggyStores:latest
+          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/{{ APP_NAME }}:latest
 
   deploy:
     name: deploy to vercel
