--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18",
     "react-redux": "^9.1.2",
     "react-toastify": "^10.0.5",
+    "sass": "^1.79.4",
     "yup": "^1.4.0"
   },
   "devDependencies": {
@@ -27,6 +28,7 @@
     "@types/react-redux": "^7.1.34",
     "eslint": "^8",
     "eslint-config-next": "14.2.14",
+    "jest": "^29.7.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
