--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
     "@iconify/react": "^5.0.2",
+    "@mui/material": "^6.1.3",
     "@reduxjs/toolkit": "^2.2.7",
     "formik": "^2.4.6",
     "hamburger-react": "^2.5.1",
