--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,7 @@ on:
 jobs:
   test:
     name: build application
-    runs-on: ubuntu latest
+    runs-on: ubuntu-latest
 
     steps:
       - name: checkout code
@@ -21,7 +21,7 @@ jobs:
 
   build:
     name: build and deploy to docker
-    runs-on: ubuntu latest
+    runs-on: ubuntu-latest
     needs: test
 
     steps:
@@ -46,7 +46,7 @@ jobs:
 
   deploy:
     name: deploy to vercel
-    runs-on : ubuntu latest
+    runs-on : ubuntu-latest
     needs: build
 
     steps:
