--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,29 +5,30 @@ on:
       - dev
 
 jobs:
-  # test:
-  #   name: build application
-  #   runs-on: ubuntu-latest
+  test:
+    name: build application
+    runs-on: ubuntu-latest
 
-  #   steps:
-  #     - name: checkout code
-  #       uses: actions/checkout@v2
-  #     - name : setup node
-  #       uses : actions/setup-node@v2
-  #       with :
-  #         node-version: '18'
-  #     - run : npm install
-  #     - run : npm run build
+    steps:
+      - name: checkout code
+        uses: actions/checkout@v2
+
+      - name : setup node
+        uses : actions/setup-node@v2
+        with :
+          node-version: '18'
+          
+      - run : npm install
+      - run : npm run build
 
   build:
     name: build and deploy to docker
     runs-on: ubuntu-latest
-    # needs: test
 
     steps:
       - name: checkout of repository
         uses: actions/checkout@v2
-        
+
       - name: setup node version
         uses: actions/setup-node@v2
         with:
