--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,18 +12,17 @@ jobs:
     steps:
       - name: checkout code
         uses: actions/checkout@v2
-
       - name : setup node
         uses : actions/setup-node@v2
         with :
           node-version: '18'
-          
       - run : npm install
       - run : npm run build
 
   build:
     name: build and deploy to docker
     runs-on: ubuntu-latest
+    needs: test
 
     steps:
       - name: checkout of repository
@@ -33,6 +32,7 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: '18'
+      - run : npm install
 
       - name: login to docker
         uses: docker/login-action@v2
