--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,11 +32,13 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: '18'
+          cache: 'npm'
       - run : npm install
 
       - name: login to docker
         uses: docker/login-action@v2
         with:
+          registry: ${{ secrets.DOCKER_HUB_USERNAME }}  
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
