--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@iconify/react": "^5.0.2",
+    "@mui/icons-material": "^6.1.3",
     "@mui/material": "^6.1.3",
     "@reduxjs/toolkit": "^2.2.7",
     "formik": "^2.4.6",
