--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,3 +1,83 @@
+# name: Baggy Store CI/CD Pipeline
+
+# on:
+#   push:
+#     branches:
+#       - dev
+
+# jobs:
+#   test:
+#     name: Build Application
+#     runs-on: ubuntu-latest
+
+#     steps:
+#       - name: Checkout Code
+#         uses: actions/checkout@v3
+
+#       - name: Setup Node
+#         uses: actions/setup-node@v3
+#         with:
+#           node-version: '18'
+
+#       - name: Install Dependencies
+#         run: npm install
+
+#       - name: Build Application
+#         run: npm run build
+
+#   build:
+#     name: Build and Deploy to Docker
+#     runs-on: ubuntu-latest
+#     needs: test
+
+#     steps:
+#       - name: Checkout Code
+#         uses: actions/checkout@v2
+
+#       - name: Setup Node
+#         uses: actions/setup-node@v2
+#         with:
+#           node-version: '18'
+
+#       - name: Install Dependencies
+#         run: npm install
+
+#       - name: Login to Docker
+#         uses: docker/login-action@v3
+#         with:
+#           username: ${{ secrets.DOCKER_USERNAME }}
+#           password: ${{ secrets.DOCKER_PASSWORD }}
+
+#       - name: Build and Push Docker Image
+#         uses: docker/build-push-action@v3
+#         with:
+#           push: true
+#           tags: ${{ secrets.DOCKER_HUB_USERNAME }}/baggy-superstores:latest
+
+#   deploy:
+#     name: Deploy to Vercel
+#     runs-on: ubuntu-latest
+#     needs: build
+
+#     steps:
+#       - name: Checkout Code
+#         uses: actions/checkout@v2
+
+#       - name: Deploy to Vercel
+#         run: |
+#           curl -X POST \
+#             -H "Authorization: Bearer ${{ secrets.VERCEL_TOKEN }}" \
+#             -H "Content-Type: application/json" \
+#             --data '{
+#               "name": "Baggy stores",
+#               "gitSource": {
+#                 "type": "github",
+#                 "ref": "${{ github.ref }}",
+#                 "repo": "${{ github.repository }}"
+#               },
+#               "target": "production"
+#             }' \
+#             https://api.vercel.com/v1/deployments
 name: Baggy Store CI/CD Pipeline
 
 on:
@@ -26,21 +106,21 @@ jobs:
         run: npm run build
 
   build:
-    name: Build and Deploy to Docker
+    name: Build and Push Docker Image
     runs-on: ubuntu-latest
     needs: test
 
     steps:
       - name: Checkout Code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
-      - name: Setup Node
-        uses: actions/setup-node@v2
+      - name: Cache Docker layers
+        uses: actions/cache@v3
         with:
-          node-version: '18'
-
-      - name: Install Dependencies
-        run: npm install
+          path: /tmp/.buildx-cache
+          key: ${{ runner.os }}-buildx-${{ github.sha }}
+          restore-keys: |
+            ${{ runner.os }}-buildx-
 
       - name: Login to Docker
         uses: docker/login-action@v3
@@ -53,6 +133,8 @@ jobs:
         with:
           push: true
           tags: ${{ secrets.DOCKER_HUB_USERNAME }}/baggy-superstores:latest
+          cache-from: type=local,src=/tmp/.buildx-cache
+          cache-to: type=local,dest=/tmp/.buildx-cache
 
   deploy:
     name: Deploy to Vercel
@@ -61,7 +143,7 @@ jobs:
 
     steps:
       - name: Checkout Code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: Deploy to Vercel
         run: |
