--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "@iconify/react": "^5.0.2",
     "@mui/icons-material": "^6.1.3",
     "@mui/material": "^6.1.3",
-    "@reduxjs/toolkit": "^2.2.7",
     "formik": "^2.4.6",
     "hamburger-react": "^2.5.1",
     "next": "14.2.14",
@@ -28,6 +27,7 @@
     "yup": "^1.4.0"
   },
   "devDependencies": {
+    "@reduxjs/toolkit": "^2.3.0",
     "@testing-library/jest-dom": "^6.5.0",
     "@testing-library/react": "^16.0.1",
     "@testing-library/user-event": "^14.5.2",
@@ -43,6 +43,7 @@
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8",
+    "redux-mock-store": "^1.5.4",
     "tailwindcss": "^3.4.1",
     "ts-jest": "^29.2.5",
     "typescript": "^5"
